--- a/auth/myminifactory.html
+++ b/auth/myminifactory.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="Access code"></div>
+  <div id="access_code"></div>
   <script>
 document.addEventListener("DOMContentLoaded", function(event) {
   var urlParams = new URLSearchParams(window.location.search);
