fixup! fixup! rebuild

--- a/auth/myminifactory.html
+++ b/auth/myminifactory.html
@@ -14,7 +14,7 @@
   <script>
 document.addEventListener("DOMContentLoaded", function(event) {
   var urlParams = new URLSearchParams(window.location.search);
-  if (urlParams.has('code') {
+  if (urlParams.has('code')) {
     document.getElementById('access_code').appendChild(document.createTextNode('Auth succeeded, use MYMINIFACTORY_ACCESS_CODE=' + urlParams.get('code') + ' to your .env file'));
   }
 });
