fixup! fixup! fixup! rebuild

--- a/auth/myminifactory.html
+++ b/auth/myminifactory.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-  <div id="access_code"></div>
+  <div style="display: none;" id="code_wrapper">
+    Auth succeeded, add <code id="access_code></code> to your .env file
+  </div>
   <script>
 document.addEventListener("DOMContentLoaded", function(event) {
   var urlParams = new URLSearchParams(window.location.search);
   if (urlParams.has('code')) {
-    document.getElementById('access_code').appendChild(document.createTextNode('Auth succeeded, use MYMINIFACTORY_ACCESS_CODE=' + urlParams.get('code') + ' to your .env file'));
+    document.getElementById('access_code').appendChild(document.createTextNode('MYMINIFACTORY_ACCESS_CODE=' + urlParams.get('code')));
+    document.getElementById('code_wrapper').style.display='block';
   }
 });
   </script>
