fixup! fixup! fixup! fixup! fixup! rebuild

--- a/auth/myminifactory.html
+++ b/auth/myminifactory.html
@@ -11,7 +11,7 @@
 
 <body>
   <div style="display: none;" id="code_wrapper">
-    Auth succeeded, add <code id="access_code"></code> to your .env file
+    Auth succeeded, add <pre><code id="access_code"></code></pre> to your <code>.env</code> file
   </div>
   <script>
 document.addEventListener("DOMContentLoaded", function(event) {
